# ARCHIVE_COMP0127_Robotics_System_Engineering

./: README.md
Coursework 1/: Q6.mlx
Coursework 1/cw1q4/: CMakeLists.txt  package.xml
Coursework 1/cw1q4/scripts/: cw1q4.launch  cw1q4_node.py  cw1q4_req_node.py
Coursework 1/cw1q4/src/: cw1q4_node.cpp
Coursework 1/cw1q4_srv/: CMakeLists.txt  package.xml
Coursework 1/cw1q4_srv/srv/: quat2rodrigues.srv  quat2zyx.srv  rotmat2quat.srv
Coursework 1/cw1q5c/: CMakeLists.txt  package.xml
Coursework 1/cw1q5c/launch/: cw1q5c_py.launch
Coursework 1/cw1q5c/scripts/: cw1q5c_node.py
Coursework 1/cw1q5c/src/: cw1q5c_node.cpp
Coursework 1/cw1q7b/: CMakeLists.txt  package.xml
Coursework 1/cw1q7b/launch/: cw1q7b_py.launch
Coursework 1/cw1q7b/scripts/: cw1q7b_node.py
Coursework 2/code/cw2q4/: Q4b.mlx  package.xml
Coursework 2/code/cw2q4/src/cw2q4/: youbotKine.py
Coursework 2/code/cw2q4/src/cw2q4/launch/: cw2q4.launch
Coursework 2/code/cw2q6/: CMakeLists.txt
Coursework 2/code/cw2q6/launch/: cw2q6cpp.launch
Coursework 2/code/cw2q6/scripts/: cw2q6_node.py
Coursework 2/code/cw2q6/src/: cw2q6_node.cpp
Coursework 2/code/kdl_kine/src/kdl_kine/: kdl_kine_solver.py  kdl_kine_solver_cw2q6.py
Coursework 2/code/youbot_trail_rviz_cw2/: CMakeLists.txt
Coursework 2/code/youbot_trail_rviz_cw2/src/: main.cpp
Coursework 3/CW3 Code/cw3/: Q4b.mlx  README.md
Coursework 3/CW3 Code/cw3/cw3_launch/: CMakeLists.txt  package.xml
Coursework 3/CW3 Code/cw3/cw3_launch/bags/: cw3bag2.bag  cw3bag3.bag
Coursework 3/CW3 Code/cw3/cw3_launch/config/: iiwa14.rviz  object_iiwa14.rviz
Coursework 3/CW3 Code/cw3/cw3_launch/launch/: q2.launch  q5a.launch  q5b.launch
Coursework 3/CW3 Code/cw3/cw3q2/: CMakeLists.txt
Coursework 3/CW3 Code/cw3/cw3q2/include/cw3q2/: iiwa14Kine.h
Coursework 3/CW3 Code/cw3/cw3q2/src/: iiwa14Kine.cpp
Coursework 3/CW3 Code/cw3/cw3q2/src/cw3q2/: iiwa14Kine.py  test.py
Coursework 3/CW3 Code/cw3/cw3q5/: CMakeLists.txt
Coursework 3/CW3 Code/cw3/cw3q5/scripts/: cw3q5a_node.py  cw3q5b_node.py  ground_accel.txt  plot_graph.mlx  q_ddot.txt
Coursework 3/CW3 Code/cw3/cw3q5/scripts/results_BK/: ground_accel.txt  q_ddot.txt
Coursework 3/CW3 Code/cw3/cw3q5/src/: cw3q5b.cpp
Coursework 3/CW3 Code/cw3/iiwa_gazebo/launch/: iiwa_world.launch
Coursework 3/CW3 Code/cw3/iiwa_trail_rviz_cw3/: CMakeLists.txt  package.xml
Coursework 3/CW3 Code/cw3/iiwa_trail_rviz_cw3/src/: main.cpp
Coursework 3/CW3 Code/kdl_kine/: CMakeLists.txt  package.xml  setup.py
Coursework 3/CW3 Code/kdl_kine/include/kdl_kine/: kdl_kine_solver.h
Coursework 3/CW3 Code/kdl_kine/src/: kdl_kine_solver.cpp
Coursework 3/CW3 Code/kdl_kine/src/kdl_kine/: kdl_kine_solver.py  kdl_kine_solver_cw3q5.py
code/cw2q4/: CMakeLists.txt
code/cw2q4/include/cw2q4/: youbotKine.h
code/cw2q4/src/cw2q4/: Test_ite_IKE.py
code/cw2q6/: package.xml
code/cw2q6/bags/: data2.bag
code/cw2q6/launch/: cw2q6py.launch
code/cw2q6/scripts/: potential_field.py
code/cw2q6/worlds/: world_c.world
code/kdl_kine/src/kdl_kine/: urdf.py
code/youbot_trail_rviz_cw2/bags/: data1.bag
